--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,14 @@
 extends layout
-
+extends ../node_modules/jade-bootstrap/_bootstrap
 block content
-  h1= title
-  p Welcome to #{title}
+	h1= title
+	p Welcome to #{title}
+	+icon("film")
+block body
+	+navbar("Colenso Project", "dropdown_menu")
+		+nav_item("/", "active") Home
+		+nav_item("/list") Stock
+	.container
+		h1= title
+		p| Welcome to #{title}. We have an excellent collection of letters in stock for you.
+		| We are based in #{place}.
