--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,11 @@
 doctype html
-
+extends ../node_modules/jade-bootstrap/_bootstrap
 
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    
+		
+		
