--- a/views/search.jade
+++ b/views/search.jade
@@ -3,10 +3,9 @@ extends ../node_modules/jade-bootstrap/_bootstrap
 
 block body
 	+navbar("Colenso Project", "dropdown_menu")
-			+nav_item("/", "active") Home
-			+nav_item("/search") Search
+			+nav_item("/") Home
+			+nav_item("/search","active") Search
 			+nav_item("/statistics") statistics
 	.container
 		h1= title
-		p| Welcome to #{title}. We have an excellent collection of letters in stock for you.
-		| We are based in #{place}.
+		p| Welcome to #{title}. We have an easy system for you to use to search through our stock of coleno letters
