Mostly testing different things

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,4 +9,8 @@ block body
 	.container
 		h1= title
 		p| Welcome to #{title}. We have an excellent collection of letters in stock for you.
-		| We are based in #{place}.
+		| We are based in !{place}.
+	.container
+		form(action="/search",method="get")
+			input(type="text",name="searchString")
+			input(type="submit")
