--- a/views/results.jade
+++ b/views/results.jade
@@ -8,7 +8,7 @@ block body
 			+nav_item("/statistics") statistics
 	.container
 		h1= title
-		p| Welcome to #{title}. We have an easy system for you to use to search through our stock of coleno letters
+		p| Welcome to #{title}. We have some results for you
 	.container
 		form(action="/results",method="get")
 			+input("text","searchString","Search","Search-box",type="text")
