--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,7 @@ doctype html
 extends ../node_modules/jade-bootstrap/_bootstrap
 
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
-		hello
+	head
+		title= title
+		link(rel='stylesheet', href='/stylesheets/style.css')
+	block body
