--- a/views/view.jade
+++ b/views/view.jade
@@ -2,7 +2,7 @@ extends layout
 
 block body
 	+navbar("Colenso Project", "dropdown_menu")
-			+nav_item("/", "active") Home
+			+nav_item("/") Home
 			+nav_item("/search") Search
 			+nav_item("/statistics") statistics
 	.container
