--- a/views/search.jade
+++ b/views/search.jade
@@ -14,8 +14,8 @@ block body
 				+input("text","searchString","Search","Search-box",type="text")
 				+input("text","searchString","Attribute/s","Attributes",type="xPath")
 				+submit-primary("Search")
+				
 			br
 	.container
-		- for (var x = 0; x < 3; x++)
-			+panel-info("A letter")
-				p  there is some information here
+		h3 How to use the search
+		p| 
