--- a/views/Statistics.jade
+++ b/views/Statistics.jade
@@ -3,6 +3,7 @@ extends layout
 block  body
 	+navbar("Colenso Project", "dropdown_menu")
 			+nav_item("/") Home
+			+nav_item("/list") Document list
 			+nav_item("/search") Search
 			+nav_item("/statistics","active") statistics
 	.container
