--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block body
 	+navbar("Colenso Project", "dropdown_menu")
 			+nav_item("/", "active") Home
+			+nav_item("/list") Document list
 			+nav_item("/search") Search
 			+nav_item("/statistics") statistics
 	.container
