--- a/views/results.jade
+++ b/views/results.jade
@@ -6,7 +6,6 @@ block body
 			+nav_item("/") Home
 			+nav_item("/list") Document list
 			+nav_item("/search","active") Search
-			+nav_item("/statistics") statistics
 		.container
 			h1= title
 			p| Welcome to #{title}. 
@@ -21,8 +20,8 @@ block body
 			h4 Your search of #{searchString} #{xPath} failed to return any results
 	else
 		.container
-			h4 Your search of "#{searchString}" with the attributes #{xPath} returned the following results
-			-var newCount = count + 10
+			h4 Your search of "#{searchString}" with the attributes #{xPath} returned #{resultAmount} results
+			-var newCount = count + 20
 			- for(var x = 0; x < query.length; x++)
 				- var finalSlashIndex = docPaths[x].lastIndexOf('/')
 				- var docName = docPaths[x].substring(finalSlashIndex+1,docPaths[x].length)
