--- a/views/view.jade
+++ b/views/view.jade
@@ -1,15 +1,18 @@
 extends layout
 
 block body
-	+navbar("Colenso Project", "dropdown_menu")
+	.jumbotron
+		+navbar("Colenso Project", "dropdown_menu")
 			+nav_item("/") Home
 			+nav_item("/list") Document list
 			+nav_item("/search") Search
-			+nav_item("/statistics") statistics
+		.container
+			h1= title
+			p| Welcome to #{title}. 
 	.container
-		h1= title
-		p| Welcome to #{title}. We have an excellent collection of letters in stock for you.
-	.container
+		+a-btn-success("/download?path=" + docPath) Download Raw Document
+		br
+		br
 		if viewTEI == "true"
 			+a-btn-primary("/view?path=" + docPath + "&tei=false") View without tags
 			br
