--- a/views/search.jade
+++ b/views/search.jade
@@ -10,20 +10,47 @@ block body
 			h1= title
 			p| Welcome to #{title}. 
 		.container
-			h3 Search by tei tags and attributes
-			form(action="/results",method="get")
-				+input("text","searchString","Search","Search-box",type="text")
-				+input("text","searchString","Attribute","Attribute",type="xPath")
-				+submit-primary("Search")
-			br
+			+panel-success("Search by XQuery - find all documents that match the given XQuery")
+				h4 HINTS
+				ul
+					li The TEI Namespace and XQUERY text is already generated for you
+					li You have to make sure you make a correct syntactically correct Query
+					li Here are some examples of valid XQueries
+					ul
+						li //name
+						li //name[@type = 'place' and position() = 1 and . = 'Manawarakau']
+						li //author//name
+				form(action="/XQueryResults",method="get")
+					+input("text","searchString","Query","Search-XQuery",type="text")
+					+submit-primary("Search")
 		.container
-			h3 find all documents that contain specified text
-			h4 HINTS
-			ul 
-				li Make sure the text you are searching for is in quotes 'Wellington'
-				li The following logical operators are available for use - +and, +or
-				li Yes the + is necessary for the logical operators
-				li A valid example search would be - 'Wellington' +and 'William'
-			form(action="/stringResults",method="get")
-				+input("text","searchString","Search","Search-box",type="text")
-				+submit-primary("Search")
+			+panel-success("Search by text - find all documents that contain specified text")
+				h4 HINTS
+				ul 
+					li The following logical operators are available for use - ftand (and), ftor (or), ftnot(not)
+					li Make sure the text you are searching for is in quotes 'Wellington'
+					li Here are some examples of valid searches
+					ul
+						li 'Wellington'
+						li 'Wellington' ftand 'William'
+						li 'Wellington' ftor 'William'
+						li ftnot 'William' ftand 'Wellington' ftor 'Petoni'
+				form(action="/stringResults",method="get")
+					+input("text","searchString","Text","Search-Text",type="text")
+					+submit-primary("Search")
+		.container
+			+panel-success("Search by TEI tags and attributes")
+				form(action="/results",method="get")
+					h4 HINTS
+					ul
+						li Here you can search for all the tags with certain attributes and then go to and view the documents they came from
+						li The first Attribute must start with a @ and subsequent ones must have an and before them
+						li Here are some examples of valid searches
+						ul
+							li Tag = name Attributes = ''
+							li Tag = name Attributes = @type = 'place'
+							li Tag = name Attributes = @type = 'place' and position() = 1
+					+input("text","searchString","Search","Tag",type="text")
+					+input("text","searchString","Attributes","XPath",type="xPath")
+					+submit-primary("Search")
+				br
