--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ block body
 			+nav_item("/", "active") Home
 			+nav_item("/list") Document list
 			+nav_item("/search") Search
+			+nav_item("/add") Add Document
 		.container
 			h1= title
 			p| Welcome to #{title}. We have an excellent collection of letters in stock for you.
