--- a/views/view.jade
+++ b/views/view.jade
@@ -6,6 +6,7 @@ block body
 			+nav_item("/") Home
 			+nav_item("/list") Document list
 			+nav_item("/search") Search
+			+nav_item("/add") Add Document
 		.container
 			h1= title
 			p| Welcome to #{title}.
